# internal/delivery/http/handler/handler.go
@@ -12,6 +12,9 @@ type CommonResponse struct {
 	Data      interface{}           `json:"data,omitempty"`
 	Paginator *pagination.Paginator `json:"paginator,omitempty"`
 }
+type SuccessResponse struct {
+	Message string `json:"message"`
+}
 
 type ErrorResponse struct {
 	Error   string `json:"error"`
